# raytracer

./: README.md  index.html  pyproject.toml  raytracer.html  search.js
examples/: parallelogram.py  sphere.py  triangle.py
raytracer/: camera.html  camera.py  color.html  color.py  geometry.html  geometry.py  intersections.py  materials.html  materials.py  performance.html  rendering.html  rendering.py  scene.html  scene.py
tests/: test_geometry.py
