[tool.poetry]
name = "raytracer"
version = "0.1.0"
description = ""
authors = ["Tristan Slater <hello@trslater.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
